fixed alignment

--- a/src/components/Chat/MessageList/MessageListItem/styles.module.css
+++ b/src/components/Chat/MessageList/MessageListItem/styles.module.css
@@ -4,7 +4,7 @@
 }
 
 .client {
-  float: right;
+  text-align: right;
 }
 
 .server {
